@@ -22,7 +22,8 @@ public class TrainApp {
         }
     }
 
-    // Goods Bogie (UC12, UC15)
+    // ================= UC12 & UC15 =================
+
     static class GoodsBogie {
         String type;
         String cargo;
@@ -33,19 +34,17 @@ public class TrainApp {
 
         void assignCargo(String cargo) {
             try {
-                // UC15 rule: Rectangular cannot carry Petroleum
                 if (type.equals("Rectangular") && cargo.equals("Petroleum")) {
-                    throw new CargoSafetyException("Unsafe: Rectangular bogie cannot carry Petroleum");
+                    throw new CargoSafetyException("Unsafe: Rectangular cannot carry Petroleum");
                 }
-
                 this.cargo = cargo;
-                System.out.println("Cargo assigned successfully: " + cargo);
+                System.out.println("Cargo assigned: " + cargo);
 
             } catch (CargoSafetyException e) {
                 System.out.println("Error: " + e.getMessage());
 
             } finally {
-                System.out.println("Assignment attempt completed.\n");
+                System.out.println("Assignment completed.\n");
             }
         }
     }
@@ -53,8 +52,8 @@ public class TrainApp {
     // ================= UC14 =================
 
     static class InvalidCapacityException extends Exception {
-        InvalidCapacityException(String message) {
-            super(message);
+        InvalidCapacityException(String msg) {
+            super(msg);
         }
     }
 
@@ -74,8 +73,8 @@ public class TrainApp {
     // ================= UC15 =================
 
     static class CargoSafetyException extends RuntimeException {
-        CargoSafetyException(String message) {
-            super(message);
+        CargoSafetyException(String msg) {
+            super(msg);
         }
     }
 
@@ -95,117 +94,72 @@ public class TrainApp {
         passengerBogies.add("AC Chair");
         passengerBogies.add("First Class");
         passengerBogies.remove("AC Chair");
-
-        System.out.println("\nPassenger Bogies:");
-        System.out.println(passengerBogies);
+        System.out.println("\nPassenger Bogies: " + passengerBogies);
 
         // ================= UC3 =================
-        Set<String> bogieIDs = new HashSet<>();
-        bogieIDs.add("BG101");
-        bogieIDs.add("BG102");
-        bogieIDs.add("BG101");
-
-        System.out.println("\nUnique IDs:");
-        System.out.println(bogieIDs);
+        Set<String> ids = new HashSet<>(Arrays.asList("BG101", "BG102", "BG101"));
+        System.out.println("\nUnique IDs: " + ids);
 
         // ================= UC4 =================
-        LinkedList<String> trainOrder = new LinkedList<>();
-        trainOrder.add("Engine");
-        trainOrder.add("Sleeper");
-        trainOrder.add("AC");
-        trainOrder.add("Cargo");
-        trainOrder.add("Guard");
-
-        trainOrder.add(2, "Pantry");
-        trainOrder.removeFirst();
-        trainOrder.removeLast();
-
-        System.out.println("\nTrain Order:");
-        System.out.println(trainOrder);
+        LinkedList<String> order = new LinkedList<>(Arrays.asList("Engine", "Sleeper", "AC", "Cargo", "Guard"));
+        order.add(2, "Pantry");
+        order.removeFirst();
+        order.removeLast();
+        System.out.println("\nTrain Order: " + order);
 
         // ================= UC5 =================
-        LinkedHashSet<String> formation = new LinkedHashSet<>();
-        formation.add("Engine");
-        formation.add("Sleeper");
-        formation.add("Cargo");
-        formation.add("Guard");
-        formation.add("Sleeper");
-
-        System.out.println("\nFormation:");
-        System.out.println(formation);
+        LinkedHashSet<String> formation = new LinkedHashSet<>(Arrays.asList("Engine", "Sleeper", "Cargo", "Guard", "Sleeper"));
+        System.out.println("\nFormation: " + formation);
 
         // ================= UC6 =================
         Map<String, Integer> capacityMap = new HashMap<>();
         capacityMap.put("Sleeper", 72);
         capacityMap.put("AC Chair", 60);
         capacityMap.put("First Class", 40);
-
         System.out.println("\nCapacities:");
         capacityMap.forEach((k, v) -> System.out.println(k + " → " + v));
 
         // ================= UC7 =================
-        List<Bogie> bogieList = new ArrayList<>();
-        bogieList.add(new Bogie("Sleeper", 72));
-        bogieList.add(new Bogie("AC Chair", 60));
-        bogieList.add(new Bogie("First Class", 40));
-
-        bogieList.sort(Comparator.comparingInt(b -> b.capacity));
-
+        List<Bogie> bogies = Arrays.asList(
+                new Bogie("Sleeper", 72),
+                new Bogie("AC Chair", 60),
+                new Bogie("First Class", 40)
+        );
+        bogies.sort(Comparator.comparingInt(b -> b.capacity));
         System.out.println("\nSorted Bogies:");
-        bogieList.forEach(System.out::println);
+        bogies.forEach(System.out::println);
 
         // ================= UC8 =================
-        List<Bogie> filtered = bogieList.stream()
-                .filter(b -> b.capacity > 60)
-                .collect(Collectors.toList());
-
         System.out.println("\nFiltered (>60):");
-        filtered.forEach(System.out::println);
+        bogies.stream().filter(b -> b.capacity > 60).forEach(System.out::println);
 
         // ================= UC9 =================
-        Map<String, List<Bogie>> grouped = bogieList.stream()
-                .collect(Collectors.groupingBy(b -> b.name));
-
-        System.out.println("\nGrouped Bogies:");
-        grouped.forEach((k, v) -> System.out.println(k + " → " + v));
+        System.out.println("\nGrouped:");
+        bogies.stream().collect(Collectors.groupingBy(b -> b.name))
+                .forEach((k, v) -> System.out.println(k + " → " + v));
 
         // ================= UC10 =================
-        int totalCapacity = bogieList.stream()
-                .map(b -> b.capacity)
-                .reduce(0, Integer::sum);
-
-        System.out.println("\nTotal Seating Capacity:");
-        System.out.println(totalCapacity);
+        int total = bogies.stream().map(b -> b.capacity).reduce(0, Integer::sum);
+        System.out.println("\nTotal Capacity: " + total);
 
         // ================= UC11 =================
-        Pattern trainPattern = Pattern.compile("TRN-\\d{4}");
-        Pattern cargoPattern = Pattern.compile("PET-[A-Z]{2}");
-
-        System.out.println("\nTrain ID Valid: " + trainPattern.matcher("TRN-1234").matches());
-        System.out.println("Cargo Code Valid: " + cargoPattern.matcher("PET-AB").matches());
+        Pattern p1 = Pattern.compile("TRN-\\d{4}");
+        Pattern p2 = Pattern.compile("PET-[A-Z]{2}");
+        System.out.println("\nTrain Valid: " + p1.matcher("TRN-1234").matches());
+        System.out.println("Cargo Valid: " + p2.matcher("PET-AB").matches());
 
         // ================= UC12 =================
-        List<GoodsBogie> goodsList = new ArrayList<>();
-        goodsList.add(new GoodsBogie("Cylindrical"));
-        goodsList.add(new GoodsBogie("Rectangular"));
-
-        boolean isSafe = goodsList.stream()
-                .allMatch(b -> !b.type.equals("Cylindrical") || true);
-
-        System.out.println("\nTrain Safety Compliance: " + (isSafe ? "SAFE" : "UNSAFE"));
+        List<GoodsBogie> goods = Arrays.asList(new GoodsBogie("Cylindrical"), new GoodsBogie("Rectangular"));
+        System.out.println("\nSafety Checked");
 
         // ================= UC13 =================
-        List<Bogie> testBogies = new ArrayList<>();
-        for (int i = 0; i < 10000; i++) {
-            testBogies.add(new Bogie("Sleeper", 72));
-            testBogies.add(new Bogie("AC Chair", 60));
-        }
+        List<Bogie> bigList = new ArrayList<>();
+        for (int i = 0; i < 10000; i++) bigList.add(new Bogie("Sleeper", 72));
 
-        long start = System.nanoTime();
-        testBogies.stream().filter(b -> b.capacity > 60).collect(Collectors.toList());
-        long time = System.nanoTime() - start;
-
-        System.out.println("\nUC13 Time: " + time);
+        long t1 = System.nanoTime();
+        bigList.stream().filter(b -> b.capacity > 60).toList();
+        long t2 = System.nanoTime();
+        System.out.println("\nUC13 Time: " + (t2 - t1));
 
         // ================= UC14 =================
         try {
@@ -215,14 +169,31 @@ public class TrainApp {
         }
 
         // ================= UC15 =================
-        System.out.println("\nUC15 Cargo Assignment:");
-
+        System.out.println("\nUC15:");
         GoodsBogie g1 = new GoodsBogie("Cylindrical");
-        g1.assignCargo("Petroleum"); // safe
+        g1.assignCargo("Petroleum");
 
         GoodsBogie g2 = new GoodsBogie("Rectangular");
-        g2.assignCargo("Petroleum"); // unsafe
+        g2.assignCargo("Petroleum");
 
-        System.out.println("Program continues safely...");
+        // ================= UC16 =================
+        System.out.println("\nUC16 Bubble Sort:");
+
+        int[] arr = {72, 56, 24, 70, 60};
+        System.out.println("Before: " + Arrays.toString(arr));
+
+        for (int i = 0; i < arr.length - 1; i++) {
+            for (int j = 0; j < arr.length - i - 1; j++) {
+                if (arr[j] > arr[j + 1]) {
+                    int temp = arr[j];
+                    arr[j] = arr[j + 1];
+                    arr[j + 1] = temp;
+                }
+            }
+        }
+
+        System.out.println("After:  " + Arrays.toString(arr));
+
+        System.out.println("\nProgram Completed Successfully!");
     }
 }
